--- a/package.json
+++ b/package.json
@@ -25,23 +25,28 @@
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.378.0",
     "p5": "^1.9.4",
     "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
+    "react-audio-visualizer": "^1.0.3",
     "react-audio-waveform": "^0.0.5",
     "react-dom": "^18.2.0",
     "react-material-symbols": "^4.4.0",
     "react-router-dom": "^6.23.1",
     "react-sound-visualizer": "^1.1.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "wavesurfer.js": "^7.7.15"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.12.11",
     "@types/p5": "^1.7.6",
-    "@types/react": "^18.2.66",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18.2.22",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
